# design-parity-checker

./: .gitignore  .sv.toml  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json
.beads/: issues.jsonl
.tasks/: tasks.jsonl  tasks.snapshot.json
.tickets/: design-parity-checker-039.md  design-parity-checker-08r.md  design-parity-checker-0u3.md  design-parity-checker-0zx.md  design-parity-checker-123.md  design-parity-checker-1cc.md  design-parity-checker-1d2.md  design-parity-checker-1qc.md  design-parity-checker-1tj.md  design-parity-checker-242.md  design-parity-checker-2hw.md  design-parity-checker-2j5.md  design-parity-checker-2lc.md  design-parity-checker-2zq.md  design-parity-checker-32i.md  design-parity-checker-3kx.md  design-parity-checker-3qt.md  design-parity-checker-4r9.md  design-parity-checker-4v9.md  design-parity-checker-4wm.md  design-parity-checker-4xh.md  design-parity-checker-508.md  design-parity-checker-5se.md  design-parity-checker-5xl.md  design-parity-checker-6c1.md  design-parity-checker-6f0.md  design-parity-checker-6zo.md  design-parity-checker-75g.md  design-parity-checker-79l.md  design-parity-checker-7bc.md  design-parity-checker-7hb.md  design-parity-checker-7ie.md  design-parity-checker-7ip.md  design-parity-checker-7nb.md  design-parity-checker-7oe.md  design-parity-checker-7zm.md  design-parity-checker-8gb.md  design-parity-checker-8h3.md  design-parity-checker-8jv.md  design-parity-checker-988.md  (+73 more)
docs/: 2026-02-09-background-dominance-penalty.md  2026-02-09-metric-hardening-report.md  README.md  ci_cheatsheet.md  config.md  (+11 more)
(+316 files in other folders)
