[package]
name = "dpc"
version = "0.1.0"
edition = "2021"
description = "Design Parity Checker - Compare implementations against design references"
license = "MIT"
repository = "https://github.com/user/design-parity-checker"
keywords = ["design", "parity", "visual-regression", "figma", "testing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dpc"
path = "src/main.rs"

[lib]
name = "dpc_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "cookies", "stream"] }
url = "2"
thiserror = "1.0"
# Images and colors
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "ico", "bmp", "tga", "tiff", "hdr", "dds"] }
palette = "0.7"
# CLI / parsing
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
# Headless
playwright = { version = "0.2", package = "chromiumoxide", optional = true }
futures = "0.3"
tokio-util = "0.7"
toml = "0.8"
humantime-serde = "1.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
